src/test/deca/context/valid/objet/instanceof_cont_01.deca
// Description:
//   Instanceof
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

class A {

}

{
    A a = new A();
    a instanceof A;
}
