src/test/deca/context/invalid/objet/undeclared_method_field.deca
// Description:
//    Appel d'une methode inexistante.
//
// Resultats:
//      Error
//
// Historique:
//    cree le 01/01/2023

class A{

}

{
    A a = new A();
    a.getX();
}
